# chaperone

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  nightly.yml
crates/chaperone-bridge/: Cargo.toml
crates/chaperone-bridge/src/: lib.rs
crates/chaperone-cli/: Cargo.toml
crates/chaperone-cli/src/: main.rs
crates/chaperone-cli/tests/: identity_offline.rs  onboard_e2e.rs  skeleton_ping_e2e.rs
crates/chaperone-core/: Cargo.toml
crates/chaperone-core/migrations/: 0001_init.sql  0002_vault_protection.sql
crates/chaperone-core/src/: handshake.rs  identity.rs  identity_skeleton.rs  lib.rs  logging.rs  mesh_skeleton.rs  rotation.rs  secret_key.rs  vault.rs
crates/chaperone-core/tests/: logging_static_check.rs
crates/chaperone-ledger/: Cargo.toml
crates/chaperone-ledger/src/: lib.rs
crates/chaperone-migrate/: Cargo.toml
crates/chaperone-migrate/src/: lib.rs
crates/chaperone-protocol/: Cargo.toml  build.rs
crates/chaperone-protocol/proto/: handshake.proto
crates/chaperone-protocol/src/: lib.rs
crates/chaperone-relay/: Cargo.toml
crates/chaperone-relay/src/: main.rs
crates/chaperone-sdk/: Cargo.toml
crates/chaperone-sdk/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: handshake_downgrade.rs  vault_nonce_reuse.rs
security/: crypto-decisions.md  logging-checklist.md
specs/: .gitkeep
