[package]
name = "chaperone-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
chaperone-core = { path = "../crates/chaperone-core" }

[[bin]]
name = "vault_nonce_reuse"
path = "fuzz_targets/vault_nonce_reuse.rs"
test = false
doc = false

[[bin]]
name = "handshake_downgrade"
path = "fuzz_targets/handshake_downgrade.rs"
test = false
doc = false
