[package]
name = "chaperone-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
libp2p = { version = "0.56.0", features = ["quic", "tokio", "noise", "macros", "request-response", "json"] }
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
ed25519-dalek = "2.1"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
keyring = "4.1"
bs58 = "0.5"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

[dev-dependencies]
tempfile = "3"
