[package]
name = "chaperone-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
libp2p = { version = "0.56.0", features = ["quic", "tokio", "noise", "macros", "request-response", "json"] }
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
ed25519-dalek = "2.1"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
keyring = "4.1"
bs58 = "0.5"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
argon2 = "0.5"
hkdf = "0.12"
ring = "0.17"
zeroize = { version = "1.7", features = ["derive"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
proptest = "1.4"
windows-sys = { version = "0.52", features = ["Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_Threading"] }
